Fixed all copyright text

--- a/post.html
+++ b/post.html
@@ -738,11 +738,11 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <p class="texts-left">&copy; wp-news all right reserved</p>
+                <p class="texts-left">&copy; Bangla News portal all right reserved</p>
               </div>
               <div class="col-md-6">
                 <p class="texts-right">
-                  Design & Developed by <a href="//actualw3.com">actualW3</a>
+                  Design & Developed by <a href="//devute.com">Team Devute</a>
                 </p>
               </div>
             </div>
