--- a/archive.html
+++ b/archive.html
@@ -611,26 +611,26 @@
               </div>
               <div class="col-md-4 editor-area">
                 <div class="">
-                  <p class="main-editor">pradan shompadok: Motiur Shah শিক্ষা</p>
-                  <p class="sec-editor">shompadok: Alim Rahman শিক্ষা</p>
+                  <p class="main-editor">pradan shompadok: Your name</p>
+                  <p class="sec-editor">shompadok: Shakib khan</p>
                   <p class="editor-number">
                     <i class="fa fa-phone" aria-hidden="true"></i>
-                    <span>01713449852</span>
+                    <span>+880115414741</span>
                   </p>
                   <a href="mailto:info@actualw3.com" class="editor-email">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <span>info@actualw3.com</span>
+                    <span>info@devute.com</span>
                   </a>
                 </div>
                 <!-- /.editor-area -->
               </div>
               <div class="col-md-4 footer-address">
                 <p class="footer-address-bn">
-                  ওয়াহিদ ভিউ (পঞ্চম তলা) পূর্ব জিন্দাবাজার, সিলেট-৩১০০, বাংলাদেশ।
+                  
+                  উপশহর , ব্লক ই , রোড ৫০, বাসা নঃ ০, সিলেট-৩১০০, বাংলাদেশ।
                 </p>
                 <p class="footer-address-en">
-                  Wahid View (4th Floor), East Zindabazar, Sylhet-3100,
-                  Bangladesh.
+                  Uposhohor, block-E, Road 50, House no: 0, Sylhet 300, Bangladesh
                 </p>
               </div>
             </div>
