--- a/category.html
+++ b/category.html
@@ -661,7 +661,7 @@
                 <!-- /.footer-logo -->
               </div>
               <div class="col-md-4 editor-area">
-                <div class="">
+                <div class="footer-author-area">
                   <p class="main-editor">pradan shompadok: Motiur Shah শিক্ষা</p>
                   <p class="sec-editor">shompadok: Alim Rahman শিক্ষা</p>
                   <p class="editor-number">
@@ -677,11 +677,11 @@
               </div>
               <div class="col-md-4 footer-address">
                 <p class="footer-address-bn">
-                  ওয়াহিদ ভিউ (পঞ্চম তলা) পূর্ব জিন্দাবাজার, সিলেট-৩১০০, বাংলাদেশ।
+                  
+                  উপশহর , ব্লক ই , রোড ৫০, বাসা নঃ ০, সিলেট-৩১০০, বাংলাদেশ।
                 </p>
                 <p class="footer-address-en">
-                  Wahid View (4th Floor), East Zindabazar, Sylhet-3100,
-                  Bangladesh.
+                  Uposhohor, block-E, Road 50, House no: 0, Sylhet 300, Bangladesh
                 </p>
               </div>
             </div>
