--- a/post.html
+++ b/post.html
@@ -723,11 +723,11 @@
               </div>
               <div class="col-md-4 footer-address">
                 <p class="footer-address-bn">
-                  ওয়াহিদ ভিউ (পঞ্চম তলা) পূর্ব জিন্দাবাজার, সিলেট-৩১০০, বাংলাদেশ।
+                  
+                  উপশহর , ব্লক ই , রোড ৫০, বাসা নঃ ০, সিলেট-৩১০০, বাংলাদেশ।
                 </p>
                 <p class="footer-address-en">
-                  Wahid View (4th Floor), East Zindabazar, Sylhet-3100,
-                  Bangladesh.
+                  Uposhohor, block-E, Road 50, House no: 0, Sylhet 300, Bangladesh
                 </p>
               </div>
             </div>
