Done fixing footer

--- a/archive.html
+++ b/archive.html
@@ -610,7 +610,7 @@
                 <!-- /.footer-logo -->
               </div>
               <div class="col-md-4 editor-area">
-                <div class="">
+                <div class="footer-author-content">
                   <p class="main-editor">pradan shompadok: Your name</p>
                   <p class="sec-editor">shompadok: Shakib khan</p>
                   <p class="editor-number">
@@ -619,7 +619,7 @@
                   </p>
                   <a href="mailto:info@actualw3.com" class="editor-email">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <span>info@devute.com</span>
+                    <span>info@yourdomain.com</span>
                   </a>
                 </div>
                 <!-- /.editor-area -->
