--- a/category.html
+++ b/category.html
@@ -661,16 +661,16 @@
                 <!-- /.footer-logo -->
               </div>
               <div class="col-md-4 editor-area">
-                <div class="footer-author-area">
-                  <p class="main-editor">pradan shompadok: Motiur Shah শিক্ষা</p>
-                  <p class="sec-editor">shompadok: Alim Rahman শিক্ষা</p>
+                <div class="footer-author-content">
+                  <p class="main-editor">pradan shompadok: Your name</p>
+                  <p class="sec-editor">shompadok: Shakib khan</p>
                   <p class="editor-number">
                     <i class="fa fa-phone" aria-hidden="true"></i>
-                    <span>01713449852</span>
+                    <span>+880115414741</span>
                   </p>
                   <a href="mailto:info@actualw3.com" class="editor-email">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <span>info@actualw3.com</span>
+                    <span>info@yourdomain.com</span>
                   </a>
                 </div>
                 <!-- /.editor-area -->
