fixed index page footer email

--- a/index.html
+++ b/index.html
@@ -2192,7 +2192,7 @@
                     <i class="fa fa-phone" aria-hidden="true"></i>
                     <span>+880115414741</span>
                   </p>
-                  <a href="mailto:info@actualw3.com" class="editor-email">
+                  <a href="mailto:info@yourdomain.com" class="editor-email">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
                     <span>info@yourdomain.com</span>
                   </a>
