updated header, link etc on all pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wp News - Professional WordPress Theme For News Publisher</title>
+    <title>Bangla News Portal - Free HTML Template for news portal</title>
+
     
     <!-- bootstrap css file -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -29,23 +30,23 @@
                     <div class="col-xl-3 col-md-3 col-6">
                         <div class="logo-area-one">
                             <!-- <h1>WP News <br/> <span>Wordpress news template</span></h1> -->
-                            <a href="#"> <h1> <img src="assets/images/logo.png" alt="wpnews"/><br/>  </h1> </a>
+                            <a href="index.html"> <h1> <img src="assets/images/logo.png" alt="wpnews"/><br/>  </h1> </a>
                             <h5> The News Publisher For Everyone</h5>
                         </div><!--/.logo-->
                     </div><!--/.end col md 6-->
                     <div class="col-xl-8 col-md-7 col-2">
                         <div class="main-menu-one">
                             <ul>
-                                <li><a href="#">হোম</a></li>
-                                <li><a href="#">সিলেট</a></li>
-                                <li><a href="#">খেলাধুলা</a></li>
-                                <li><a href="#">বাংলাদেশ</a></li>
-                                <li><a href="#">রাজধানী</a></li>
-                                <li><a href="#">হোম</a></li>
-                                <li><a href="#">সিলেট</a></li>
-                                <li><a href="#">আন্তর্জাতিক</a></li>
-                                <li><a href="#">রাজনীতি</a></li>
-                                <li><a href="#">বিনোদন</a></li>
+                                <li><a href="index.html">হোম</a></li>
+                                <li><a href="category.html">সিলেট</a></li>
+                                <li><a href="category.html">খেলাধুলা</a></li>
+                                <li><a href="archive.html">বাংলাদেশ</a></li>
+                                <li><a href="archive.html">রাজধানী</a></li>
+                                <li><a href="category.html">হোম</a></li>
+                                <li><a href="archive.html">সিলেট</a></li>
+                                <li><a href="category.html">আন্তর্জাতিক</a></li>
+                                <li><a href="archive.html">রাজনীতি</a></li>
+                                <li><a href="category.html">বিনোদন</a></li>
                             </ul>
                         </div><!--/.main menu-->
                     </div><!--/.end col md 8-->
